apply plugin: 'com.android.application'
apply plugin: 'com.google.gms.google-services'

android {
    namespace 'com.example.kanshi'
    compileSdk 35

    defaultConfig {
        applicationId "com.example.kanshi"
        minSdk 21
        targetSdk 35
        versionCode 481
        versionName "9.5.1"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildFeatures {
        buildConfig true
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_21
        targetCompatibility JavaVersion.VERSION_21
    }
}

dependencies {
    implementation 'org.nanohttpd:nanohttpd:2.3.1'
    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.2.0-beta01'
    implementation 'androidx.browser:browser:1.8.0'
    implementation 'androidx.work:work-runtime:2.10.1'
    implementation 'com.google.firebase:firebase-analytics:22.4.0'
    implementation 'androidx.appcompat:appcompat:1.7.0'
    implementation 'androidx.recyclerview:recyclerview:1.4.0'
    implementation 'androidx.recyclerview:recyclerview-selection:1.1.0'
    implementation 'androidx.webkit:webkit:1.13.0'
    implementation 'com.google.android.material:material:1.12.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
    implementation 'androidx.core:core-splashscreen:1.0.1'
    implementation 'com.google.guava:guava:31.1-android'
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
}